--- a/README
+++ b/README
@@ -1,2 +1,28 @@
-# csci5229-hw5
-HW5: Lighting - CSCI 5229 Computer Graphics - University of Colorado Boulder
+HW5: Lighting
+
+Timothy Mason
+CSCI 5229-001B Computer Graphics - University of Colorado Boulder
+
+Expands on the Rockets + Planet scene of HW3 & HW4 by adding basic lighting
+
+Key bindings
+  l          Toggles lighting
+  a/A        Decrease/increase ambient light
+  d/D        Decrease/increase diffuse light
+  s/S        Decrease/increase specular light
+  e/E        Decrease/increase emitted light
+  n/N        Decrease/increase shininess
+  F1         Toggle smooth/flat shading
+  F2         Toggle local viewer mode
+  F3         Toggle light distance (1/5)
+  F8         Change ball increment
+  F9         Invert bottom normal
+  m          Toggles light movement
+  []         Lower/rise light
+  p          Toggles ortogonal/perspective projection
+  +/-        Change field of view of perspective
+  x          Toggle axes
+  arrows     Change view angle
+  PgDn/PgUp  Zoom in and out
+  0          Reset view angle
+  ESC        Exit
